# CppExercise

./: .gitignore  CMakeLists.txt  build.bat  main.cpp
common/: BinaryTree.hpp
src/: main.cpp  test.cpp  test.h
src/cpp_idoms/: AlgebraicHierarchy.cpp  AlgebraicHierarchy.h
src/json/: autolink.h  config.h  forwards.h  json.h  json_allocator.h  json_reader.cc  json_value.cc  json_writer.cc  reader.h  value.h  writer.h
src/stl_stuff/: stl_list.hpp
src/template/: SignalTrivial.h  TemplateFunction.cpp  TemplateFunction.h
